2013-07-02  Ruth Fong  <ruth_fong@apple.com>

        Change event should not be dispatched by clicking a scrollbar of select listbox
        https://bugs.webkit.org/show_bug.cgi?id=118019
        <rdar://problem/14297760>

        Reviewed by Dean Jackson.

        Merge the following:
        http://src.chromium.org/viewvc/blink?view=revision&revision=151689
        https://chromium.googlesource.com/chromium/blink/+/492549b0fcaa58a85aa0797446b62985a263704f

        * fast/forms/select/listbox-click-on-scrollbar-expected.txt: Added.
        * fast/forms/select/listbox-click-on-scrollbar.html: Added.
        Tests that an onChange() event is not fired when the scrollbar of a 
        <select multiple> element is clicked.

2013-07-02  David Farler  <dfarler@apple.com>

        Unreviewed rebaseline of media/video-controls-captions-trackmenu-localized after r151697.

        * platform/mac-lion/media/video-controls-captions-trackmenu-localized-expected.txt: Removed.
        "Unknown SDH" -> "Unknown".

2013-07-02  David Farler  <dfarler@apple.com>

        Unreviewed rebaseline of Mac Lion fast/js/global-constructors-attributes after r151914.

        * platform/mac-lion/fast/js/global-constructors-attributes-expected.txt:
        WaveTable -> PeriodicWave

2013-07-02  Radu Stavila  <stavila@adobe.com>

        [CSS Regions] Improve implementation of elements in region being flowed to another flow thread
        https://bugs.webkit.org/show_bug.cgi?id=118300

        Reviewed by David Hyatt.

        * fast/regions/flow-body-in-html.html:
        * fast/regions/region-content-flown-into-region-expected.html:
        * fast/regions/region-content-flown-into-region.html:
        * fast/regions/universal-selector-children-to-the-same-region.html:

2013-07-02  David Farler  <dfarler@apple.com>

        Skip cache partitioning tests on Lion.

        Rubber stamped by Jeffrey Pfau.

        * platform/mac-lion/TestExpectations: