@@ -1,3 +1,15 @@
+2013-07-02  Commit Queue  <commit-queue@webkit.org>
+
+        Unreviewed, rolling out r152318.
+        http://trac.webkit.org/changeset/152318
+        https://bugs.webkit.org/show_bug.cgi?id=118333
+
+        This patch broke media/track/track-automatic-subtitles.html on
+        Mac (Requested by dfarler on #webkit).
+
+        * page/CaptionUserPreferencesMediaAF.cpp:
+        (WebCore::CaptionUserPreferencesMediaAF::textTrackSelectionScore):
+
 2013-07-02  Ruth Fong  <ruth_fong@apple.com>
 
         Change event should not be dispatched by clicking a scrollbar of select listbox
